# local-weather-forecasting-ml

./: .gitattributes  .gitignore  AGENTS.md  CHANGES.md  METDATAPY.md  README.md  REVIEW_REPORT.md  TO-DO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  default_delta.yaml  example.yaml  resume_rh_gradient_boosting.yaml  resume_rh_random_forest_h24.yaml  smoke.yaml  target_pres_ml.yaml  target_rh_ml.yaml  weathercloud_mapping.yaml
data/raw/: Weathercloud Nea Triglia Station 2023-03.csv  Weathercloud Nea Triglia Station 2023-04.csv  Weathercloud Nea Triglia Station 2023-05.csv  Weathercloud Nea Triglia Station 2023-06.csv  Weathercloud Nea Triglia Station 2023-07.csv  Weathercloud Nea Triglia Station 2023-08.csv  smoke_weathercloud.csv  (+33 more)
docs/: _config.yml  artifacts.md  configuration.md  data-ingestion.md  datasets-splits.md  development.md  evaluation-reporting.md  getting-started.md  index.md  pipeline-overview.md  preprocessing-features.md  reproducibility.md  running-the-experiment.md  training.md
notebooks/: exploratory_data_analysis.ipynb  full_experiment_colab.ipynb
scripts/: generate_smoke_raw_data.py  merge_run_snapshots.py  run_experiment.py  snapshot_run.py
tests/: conftest.py  test_baselines_and_metrics.py  test_config.py  test_datasets.py  test_leakage.py  test_logging.py  test_merge_run_snapshots.py  test_metdatapy_integration.py  test_metrics.py  test_models.py  test_parallel_horizons.py  test_pipeline_artifacts.py  test_snapshot_plotting.py  test_splits.py  test_thread_budget.py  test_training_progress.py
(+16 files in other folders)
